tests/api/reference/negative/12-map-key-type.asm
const invalid: map = map.set(map.new(), 1, 2)
